changed type of order from text to float