@@ -19,11 +19,10 @@ public class EditableQAStepRowSource implements RowSource {
     }
 
     public Object[] values() {
-        return new Object[] { selected, Integer.toString(source.getId()),
-                Integer.toString(source.getDatasetId()), Integer.toString(source.getVersion()),
-                source.getName(), source.getProgram(), source.getProgramArguments(), 
-                Boolean.valueOf(source.isRequired()), source.getOrder(), source.getWhen(),
-                source.getWho(), source.getResult(), source.getStatus() };
+        return new Object[] { selected, Integer.toString(source.getId()), Integer.toString(source.getDatasetId()),
+                Integer.toString(source.getVersion()), source.getName(), source.getProgram(),
+                source.getProgramArguments(), Boolean.valueOf(source.isRequired()), new Float(source.getOrder()),
+                source.getWhen(), source.getWho(), source.getResult(), source.getStatus() };
     }
 
     public void setValueAt(int column, Object val) {
@@ -32,44 +31,44 @@ public class EditableQAStepRowSource implements RowSource {
             selected = (Boolean) val;
             break;
         case 1:
-            source.setId(Integer.parseInt((String)val));
+            source.setId(Integer.parseInt((String) val));
             break;
         case 2:
-            source.setDatasetId(Integer.parseInt((String)val));
+            source.setDatasetId(Integer.parseInt((String) val));
             break;
         case 3:
-            source.setVersion(Integer.parseInt((String)val));
+            source.setVersion(Integer.parseInt((String) val));
             break;
         case 4:
-            source.setName((String)val);
+            source.setName((String) val);
             break;
         case 5:
-            source.setProgram((String)val);
+            source.setProgram((String) val);
             break;
         case 6:
-            source.setProgramArguments((String)val);
+            source.setProgramArguments((String) val);
             break;
         case 7:
-            source.setRequired(((Boolean)val).booleanValue());
+            source.setRequired(((Boolean) val).booleanValue());
             break;
         case 8:
-            source.setOrder((String)val);
+            source.setOrder(((Float)val).floatValue());
             break;
         case 9:
             try {
-                    source.setWhen(DateFormat.getDateInstance().parse((String)val));
-                } catch (ParseException e) {
-                    throw new RuntimeException(e.getMessage());
-                }
+                source.setWhen(DateFormat.getDateInstance().parse((String) val));
+            } catch (ParseException e) {
+                throw new RuntimeException(e.getMessage());
+            }
             break;
         case 10:
-            source.setWho((User)val);
+            source.setWho((User) val);
             break;
         case 11:
-            source.setResult((String)val);
+            source.setResult((String) val);
             break;
         case 12:
-            source.setStatus((String)val);
+            source.setStatus((String) val);
             break;
         default:
             throw new RuntimeException("invalid column - " + column);
@@ -86,7 +85,7 @@ public class EditableQAStepRowSource implements RowSource {
 
     public void validate(int rowNumber) {
         // NOTE no validation needed
-        
+
     }
 
 }
